docker.run/docker.run/src/main/resources/kubernetesYaml/vm_files/root/ingress/pod.yaml
apiVersion: v1
kind: Service
metadata:
        name: ser
        labels:
                ser: ing
spec:
        ports:
                - port: 80
        type: ClusterIP
        selector:
                ser: ing-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
        name: my-ing-dep
        labels:
                ser: ing
spec:
        replicas: 1
        selector:
                matchLabels:
                        ser: ing
        template:
                metadata:
                        name: my-ing-pod
                        labels:
                                ser: ing
                spec:
                        containers:
                                - name: con-ing
                                  image: nginx
                                  ports:
                                          - containerPort: 80
