docker.run/docker.run/src/main/resources/kubernetesYaml/vm_files/root/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-09-26T02:14:09Z"
  labels:
    app: nginx
  name: nginx
  namespace: ingres
  resourceVersion: "225892"
  uid: 439f3e4a-d915-4895-869d-f4fec0bb6dc4
spec:
  clusterIP: 10.104.35.136
  clusterIPs:
  - 10.104.35.136
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
