docker.run/docker.run/src/main/resources/kubernetesYaml/vm_files/root/ingress/services.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-09-26T02:20:31Z"
  labels:
    app: nginx
  name: nginx
  namespace: ingres
  resourceVersion: "226586"
  uid: d9946675-6aae-4ee8-b68c-56694df161e0
spec:
  clusterIP: 10.101.22.154
  clusterIPs:
  - 10.101.22.154
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
