docker.run/docker.run/src/main/resources/kubernetesYaml/vm_files/root/ingress/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
        name: my-ing
spec:
   rules:
      host:
      http:
         paths:
            backend:
               service:
                  name:
                  port:
                     number:
            path:
            pathType:
