docker.run/docker.run/src/main/resources/kubernetesYaml/vm_files/root/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  namespace: ingres
spec:
  ingressClassName: default
  defaultBackend:
    service:
      name: kuard
      port:
        number: 80
status:
  loadBalancer:
    ingress:
    - ip: 10.0.0.50
